# Gladoscopy

./: .gitignore  AllTheNodes.json  DeveloperDocumentation.docx  ExtractInfoFromMetaData.py  MM_PycroManager_JSON.json  PycroManagerDataReadTest.py  README.md  README.txt  SMLM_locs.csv  TestDrawingUI.pyw  TestPlots.ui  TestTriggerScope.py  TestVarsM.json  Testgraph.json  UILaserController.ui  UI_LaserController.pyw  environment.yaml  glados_state.json  mda_state.json  napari plugin method.txt  profiling_results.prof  pyproject.toml  requirements.txt  win_create_env.bat  ~$veloperDocumentation.docx  ~WRL0983.tmp
AutonomousMicroscopy/: requirements.txt
AutonomousMicroscopy/Analysis_Images/: StarDist_image.py
AutonomousMicroscopy/Analysis_Measurements/: AverageIntensity.py  CellCounter.py
AutonomousMicroscopy/Analysis_Shapes/: StarDist.py
AutonomousMicroscopy/CellScoringScripts/: SimpleCellOperants.py
AutonomousMicroscopy/CellSegmentScripts/: StarDist.py
AutonomousMicroscopy/ExampleData/: BF_test_avg.tiff  example_labels.tif
AutonomousMicroscopy/MainScripts/: HelperFunctions.py  Main.py
AutonomousMicroscopy/ROICalcScripts/: DivideCSS.py  MultiplyCSS.py
AutonomousMicroscopy/Real_Time_Analysis/: LaserAdjustment.py  RT_counter.py  pSMLM.py
AutonomousMicroscopy/ScoringMetrics/: DefaultScoringMetrics.py
Documentation/: GUI.html  pdocInfo.txt
GUI/: AnalysisClass.py  Analysis_dockWidgets.py  AutonomousMicroscopyScripts.py  FlowChart_dockWidgets.py  GUI.py  GUI.ui  GUI_napari.py  GUI_napariOnly.py  GUI_temp.ui  GUI_working.ui  GUIv2.py  LaserControlScripts.py  LiveModeControlScripts.py  LiveModeControlScripts_GARBAGE.py  MDAGlados.py  MM_PycroManager_JSON.json  MMcontrols.py  TestingUI.py  UI_LaserController.pyw  custom_widget_ui.py  mdaAnalysisScoringVisualisation.py  napariGlados.py  napariHelperFunctions.py  sharedFunctions.py  utils.py
GUI/Icons/: GladosIcon.pdn
LaserControl/: GUI.pyw  GUI.ui  MM_PycroManager_JSON.json  README.md  TestPlots.ui  TestTriggerScope.py  UI_LaserController.pyw
Testing/: GraphStore.json  LearnAsynch.py  Napari_MM_run.py  PycroManagerLiveModeMinimal.py  PycroManagerNapariTest.py  PycroManagerTestingGround.py  RealTimeSMLMAnalysisPhasor.py  SlackIntegrationTest.py  TestMultiFrameMovie_100frames.tiff  TestSingleFullFrame512px.tiff  flowChart_Nodz.py  flowchart.py  keys.txt  keys.txt.pub  keysinfo.txt  napariLive_test.py
Tiling/: CellScoring.py  ImageStiching.py  ImageStiching_hfxTesting_20220810.py  MultiDHookTest.py  TilingTesting
docs/: AnalysisClass.html  index.html
glados-pycromanager/: .gitignore  Aa.json  DemoCamPosList.pos  InspectProfile.py  MinimalGraph.json  README.md  README.txt  RTSMLMTest.json  SMLM_locs.csv  Showcase_Advanced1.json  Showcase_Basic1.json  Showcase_Developer_1.json  Showcase_Variables_1.json  Testgraph.json  TimerTest.json  VisDebug.json  Wonderful.2json.json  Wonderful.json  glados_state.json  pyproject.toml  requirements.txt  requirements_20250501.txt
glados-pycromanager/PyPI/: MANIFEST.in  README_PIP.md  setup.cfg
glados-pycromanager/Tiling/: AutonomousMicroscopy  CellScoringFunctions.py  PycroManagerFunctions.py  TestXYpositioning  TilingFunctions.py
glados-pycromanager/environments/: environment_old.yml  requirementsPy313.txt  requirements_20250501.txt
glados-pycromanager/glados_pycromanager/: .gitignore  AcqTest.json  AnalysisClass.py  Analysis_dockWidgets.py  ImageStiching_SNAP.py  LongDurationXYStability.py  Py313_environment.yaml  Stiching_GoToPointOfInterest.py  Testgraph.json  UVlight_trigger_viaTS  __init__.py  _dock_widget.py  glados_state.json  mda_state.json  napari.yaml  requirements.txt  requirementsPy311.txt  ~$veloperDocumentation.docx
glados-pycromanager/glados_pycromanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/Analysis_Images/: StarDist_image.py
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/Analysis_Measurements/: AverageImage.py  AverageIntensity.py  CellCounter.py  RandomShapes.py  StarDist_image.py  checkAgainstList.py
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/Analysis_Shapes/: StarDist.py
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/CustomFunctions/: AutoFocusBF.py  ExampleCustomFunction_DiceRoll.py  StarDist_init.py  Strobo_lasers.py
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/MainScripts/: HelperFunctions.py  Main.py
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/Real_Time_Analysis/: BioImageModelZoo.py  EndAtFrame.py  LaserAdjustment.py  RT_counter.py  SharpnessValue.py  pSMLM.py
glados-pycromanager/glados_pycromanager/AutonomousMicroscopy/Scoring_Measurements/: DefaultScoringMetrics.py
glados-pycromanager/glados_pycromanager/Documentation/: AnalysisClass.html  DeveloperManual.md  FlowChart_dockWidgets.html  GUI_napari.html  GUI_napariOnly.html  MDAGlados.html  MMcontrols.html  UserManual.md  _CreateDocumentation.py  index.html  napari plugin method.txt  napariGlados.html  napariHelperFunctions.html  pdocInfo.txt  sharedFunctions.html  utils.html  ~$veloperDocumentation.docx
glados-pycromanager/glados_pycromanager/GUI/: AnalysisClass.py  Analysis_dockWidgets.py  AutonomousMicroscopyScripts.py  FlowChart_dockWidgets.py  GUI.py  GUI_napari.py  GUIopen.bat  IniFileSaveTest.ini  LaserControlScripts.py  MDAGlados.py  MM_PycroManager_JSON.json  MMcontrols.py  TestSaveLayout.pkl  __init__.py  custom_logging.py  custom_widget_ui.py  mdaAnalysisScoringVisualisation.py  microscopeInterfaceLayer.py  napariGlados.py  napariHelperFunctions.py  sharedFunctions.py  utils.py
glados-pycromanager/glados_pycromanager/GUI/Icons/: GUI_resourceFileIcons.qrc  NodzIcons.afdesign
glados-pycromanager/glados_pycromanager/GUI/nodz/: default_config.json  nodz_custom.py  nodz_main.py  nodz_utils.py
glados-pycromanager/glados_pycromanager/LaserControl/: ExtractInfoFromMetaData.py
glados_pycromanager/: _dock_widget.py  config.py  napari.yaml
temp/: gui_settings-Test.ini
(+60 files in other folders)
