[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glados-pycromanager"
version = "0.0.1"
authors = [
  { name="Koen J.A. Martens", email="koenjamartens@gmail.com" }
]
description = "Glados-pycromanager: Napari interface for Pycromanager and autonomous microscopy"
readme = "README_PIP.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["microscopy", "molecule", "pycromanager", "micromanager"]
dependencies = [
"bioimageio.core==0.8.0",
"csbdeep==0.7.3",
"google-auth-oauthlib==1.0.0",
"importlib-resources==5.12.0",
"napari==0.5.6",
"ndtiff==2.1.0",
"numpy==1.26.0",
"numba==0.61.2",
"opencv-python==4.11.0.86",
"pycromanager==1.0.2",
"pyqtgraph==0.13.3",
"PyQtWebEngine==5.15.7",
"shapely==2.0.1",
"slack==0.0.2",
"slackeventsapi==3.0.3",
"tensorflow_intel==2.18.0",
"zarr==2.17.0",
]

[project.scripts]
"glados" = "glados_pycromanager.GUI.GUI_napari:main"
"glados-pycromanager" = "glados_pycromanager.GUI.GUI_napari:main"
"gladospycromanager" = "glados_pycromanager.GUI.GUI_napari:main"
"glados-pycro-manager" = "glados_pycromanager.GUI.GUI_napari:main"

[project.entry-points."napari.manifest"]
glados-pycromanager = "glados_pycromanager:napari.yaml"